--- a/site_bootsrap/style.css
+++ b/site_bootsrap/style.css
@@ -6,8 +6,8 @@ body {
     font-size: 16px;
     font-family: 'Roboto Thin', sans-serif;
     font-weight: 400;
-    color: #000;
-    background-color: #fff;
+    color: #fff;
+    background-color: #000;
     min-width: 320px;
 }
 
@@ -141,6 +141,7 @@ a:hover {
     font-size: 20px;
     margin-left: 10px;
 }
+
 /* Product card */
 
 /* Footer */
