--- a/individual_site/style.css
+++ b/individual_site/style.css
@@ -49,24 +49,40 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: auto;
 }
 
 .info-thumb img {
     max-width: 100%;
     max-height: 100%;
+    /*height: 50%;*/
+    width: 100%;
+    /*height: 300px;*/
 }
 
 .info-card:hover {
     box-shadow: 0 14px 30px -15px rgba(0, 0, 0, 0.75);
 }
 
+.info-thumb {
+    height: 50%;
+    width: 70%;
+    margin-bottom: 3px;
+}
+
 .info-card {
+    height: 97%;
+    padding: 20px;
     color: #000;
     border-radius: 20px;
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .info-details {
+    /*height: 50%;*/
 }
 
 .info-details h4 a {
@@ -78,29 +94,30 @@ body {
     height: 50px;
     overflow: hidden;
     text-decoration: none;
-    margin-bottom: 50px;
-}
-
-.info-details {
-    padding: 20px;
+    max-margin-bottom: 50px;
 }
 
 .info-details p {
-    /*font-size: 15px;*/
+    font-size: 20px;
     /*margin-bottom: 20px;*/
     /*height: 0px;*/
     /*overflow: hidden;*/
 }
 
-.row-flex {
-    display: flex;
-    flex-flow: row wrap;
+.info-bottom-details {
+    overflow: hidden;
+    border-top: 1px solid #000;
+    padding-top: 20px;
+    margin-bottom: 0;
+    margin-top: auto;
 }
 
 .info-bottom-details {
-    overflow: hidden;
-    border-top: 1px solid white;
-    padding-top: 20px;
+    height: auto;
+}
+
+.info-bottom-details .date span {
+    font-weight: bold;
 }
 
 .info-links a{
@@ -111,12 +128,54 @@ body {
     color: #dbdbdb;
 }
 
-.info-bottom-details .date span {
-    font-weight: 500;
-}
-
 .container {
     margin: 0;
 }
 /* Info */
 /* Main Content */
+
+/* Footer */
+.footer {
+    /*background-color: #343434;*/
+}
+
+.footer h4 {
+    text-align: center;
+    color: #ccc;
+    text-transform: uppercase;
+    font-size: 16px;
+    border-bottom: 1px solid #666;
+    padding-bottom: 3px;
+}
+
+.footer a {
+    text-decoration: none;
+    transition: all .3s;
+}
+
+.footer ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
+.footer a, .footer li {
+    color: #c8c8c8;
+}
+
+.footer li a {
+    display: block;
+}
+
+.footer-icons a {
+    display: inline-block;
+    margin-right: 15px;
+    font-size: 20px;
+}
+/* Footer */
