--- a/individual_site/style.css
+++ b/individual_site/style.css
@@ -52,37 +52,46 @@ body {
     height: auto;
 }
 
+.info-thumb a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+}
+
 .info-thumb img {
     max-width: 100%;
     max-height: 100%;
-    /*height: 50%;*/
-    width: 100%;
-    /*height: 300px;*/
 }
 
 .info-card:hover {
     box-shadow: 0 14px 30px -15px rgba(0, 0, 0, 0.75);
 }
 
-.info-thumb {
+.info-thumbs {
     height: 50%;
     width: 70%;
     margin-bottom: 3px;
 }
 
 .info-card {
-    height: 97%;
+    box-sizing: border-box;
+    height: calc(100% - 20px);
+    margin-bottom: 20px;
     padding: 20px;
     color: #000;
     border-radius: 20px;
-    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: start;
 }
 
 .info-details {
-    /*height: 50%;*/
+    height: auto;
+    flex-grow: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .info-details h4 a {
@@ -91,29 +100,22 @@ body {
     color: #000;
     font-weight: 500;
     display: block;
-    height: 50px;
     overflow: hidden;
     text-decoration: none;
-    max-margin-bottom: 50px;
 }
 
 .info-details p {
     font-size: 20px;
-    /*margin-bottom: 20px;*/
-    /*height: 0px;*/
-    /*overflow: hidden;*/
+    flex-grow: 3;
 }
 
 .info-bottom-details {
+    width: 100%;
     overflow: hidden;
     border-top: 1px solid #000;
     padding-top: 20px;
     margin-bottom: 0;
     margin-top: auto;
-}
-
-.info-bottom-details {
-    height: auto;
 }
 
 .info-bottom-details .date span {
@@ -136,7 +138,6 @@ body {
 
 /* Footer */
 .footer {
-    /*background-color: #343434;*/
 }
 
 .footer h4 {
