history: center imgs

--- a/individual_site/history.css
+++ b/individual_site/history.css
@@ -26,6 +26,10 @@
 }
 .img-block {
     padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    /*justify-content: center;*/
+    align-items: center;
 }
 
 .img-block h6 {
